Fix cards not dragging on mobile, in the deck builder, draft, etc. The card starts to drag but then the mobile browser default touch action of scrolling takes over, preventing the card from actually being moved.
Explained within https://docs.dndkit.com/api-documentation/sensors/pointer#recommendations

--- a/src/client/css/stylesheet.css
+++ b/src/client/css/stylesheet.css
@@ -294,3 +294,9 @@ img.mana-symbol-sm {
 .markdown .text-center .markdown-card-image {
 	margin: auto;
 }
+
+/* Used in conjunction with DraggableCard and DndContext. Per https: //docs.dndkit.com/api-documentation/sensors/pointer#touch-action turns off
+* the mobile browser's default touch actions on elements with the class, which is necessary for dragging to work as expected with DndContext. */
+.no-touch-action {
+  touch-action: none;
+}
